Fix spacing beneath speedometer and gauge

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -555,5 +555,12 @@ span.glyphicon-wrench {
   height: auto;
 }
 
+.oil-reminder {
+  font-size: 20px;
+  padding-top: 25px;
+}
 
-
+.red-text {
+  color: red;
+  font-weight: bold;
+}
